# perfXM

./: .gitignore  README.md  index.html  metadata.json  types.ts
backend/: config.py  database.py  db.sqlite3  init_db.py  main.py  pyproject.toml  security.py  setup.py
backend/api/: organizations.py  projects.py  roles.py  scripts.py  slave_config.py  test_plan.py  user_system.py
backend/models/: __init__.py  organize_model.py  project_member.py  project_model.py  role_model.py  script_model.py  slave_model.py  test_plan.py  test_plan_script.py  test_plan_slave.py  user_model.py  user_org_role.py
backend/schemas/: __init__.py  common_schemas.py  organize_schemas.py  project_schemas.py  role_schemas.py  script_schemas.py  slave_schemas.py  test_plan_schemas.py  user_schemas.py
components/: AgentManager.tsx  Dashboard.tsx  ExecutionMonitor.tsx  LoginPage.tsx  PlanManager.tsx  ProjectManager.tsx  ScriptManager.tsx  Sidebar.tsx  SystemOrgManager.tsx  SystemRoleManager.tsx  SystemUserManager.tsx
contexts/: AgentContext.tsx  LanguageContext.tsx  PlanContext.tsx  ProjectContext.tsx  ScriptContext.tsx  SystemContext.tsx
frontend/perfx-platform/: index.html  package-lock.json  package.json  vite.config.ts
frontend/perfx-platform/src/: App.tsx  index.css  types.ts
frontend/perfx-platform/src/components/: AgentManager.tsx  ConfigManager.tsx  ExecutionMonitor.tsx  LoginPage.tsx  PlanManager.tsx  ProjectManager.tsx  ScriptManager.tsx  SystemOrgManager.tsx  SystemRoleManager.tsx  SystemUserManager.tsx
services/: aiService.ts
utils/: translations.ts
(+8 files in other folders)
