[project]
name = "backend"
version = "0.1.0"
description = "PerfX 平台后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "tortoise-orm>=0.21.0",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.5.0",
    "aerich>=0.7.2",
]
